# rpc-copilot

./: .dockerignore  .env.example  Dockerfile  MULTIMODAL_RAG.md  README.md  README.zh-CN.md  SOURCES.md  docker-compose.yml  pyproject.toml  resume-grc-copilot.typ
agent/: __init__.py  graph.py  llm.py  nodes.py  skills.py  state.py  tools.py
api/: bootstrap.py  deployment.py  main.py  real_runtime.py  serve.py
app/: hello.py
data/parsed/: CELEX_32016R0679_EN_TXT.md  GBT+22239-2019.md  GBT+35273-2020.md  _parents_store.json  cybersecurity-law.md  data-security-law.md
evals/: GUIDE.md  __init__.py  dataset.jsonl  metrics.py  multimodal_dataset.jsonl  run_eval.py  run_multimodal_eval.py  run_retrieval_ablation.py  schema.py  validate_dataset.py
ingest/: chunk.py  chunk_parent.py  index.py  parse.py  parse_html.py  parse_mineru.py  visual.py
mcp_server/: __init__.py  server.py
project-guide/: index.html
rag/: citations.py  dense.py  multimodal.py  rerank.py  retrieve.py  sparse.py  visual.py
runtime/: __init__.py  device.py
skills/clause-comparison/: SKILL.md
skills/gap-analysis/: SKILL.md
skills/regulation-qa/: SKILL.md
tests/: test_agent_graph.py  test_agent_llm.py  test_agent_tools.py  test_api.py  test_bootstrap.py  test_chunk.py  test_chunk_parent.py  test_citations.py  test_deployment.py  test_device.py  test_eval_schema.py  test_index.py  test_mcp_server.py  test_metrics.py  test_multimodal.py  test_multimodal_eval.py  test_multimodal_runtime.py  test_real_runtime.py  test_retrieval.py  test_retrieval_ablation.py  test_skills.py  test_visual_ingest.py  test_visual_retrieval.py
web/: app.js  index.html  styles.css
