[project]
name = "grc-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "jieba>=0.42.1",
    "langgraph>=1.2.9",
    "markdownify>=1.2.3",
    "mcp>=1.28.1",
    "mineru[core]>=3.4.3",
    "openai>=2.44.0",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' and platform_machine == 'AMD64'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
container = [
    "fastapi>=0.139.0",
    "langgraph>=1.2.9",
    "modelscope>=1.35.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.11.0",
    "uvicorn>=0.51.0",
]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:invalid escape sequence.*:SyntaxWarning:jieba.*",
    "ignore:pkg_resources is deprecated as an API.*:UserWarning:jieba._compat",
]
